[project]
name = "sound-classifier"
version = "0.1.0"
description = "Real-time audio classification using YamNet and TensorFlow Lite"
requires-python = ">=3.11,<3.12"
dependencies = [
    "tensorflow>=2.13,<2.16",
    "tensorflow-hub==0.14.0",
    "flask>=3.0",
    "pyaudio>=0.2.13",
    "numpy>=1.24,<2.0",
    "scipy>=1.10",
    "setuptools>=68.0,<71.0",
    "tensorflow-io>=0.36.0,<0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "black>=23.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.black]
line-length = 88
target-version = ['py311']
